--- a/components.json
+++ b/components.json
@@ -2,10 +2,10 @@
   "$schema": "https://ui.shadcn.com/schema.json",
   "style": "new-york",
   "rsc": false,
-  "tsx": false,
+  "tsx": true,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "app/globals.css",
+    "css": "src/globals.css",
     "baseColor": "zinc",
     "cssVariables": true,
     "prefix": ""
